packages/ui/collapse/src/index.less
@osui-collapse-class-prefix: osui-collapse;

.@{osui-collapse-class-prefix} {
    &.@{ant-prefix}-collapse > .@{ant-prefix}-collapse-item {
        border-bottom: 1px solid var(--color-gray-4);
    }

    &.@{ant-prefix}-collapse {
        border: 1px solid var(--color-gray-4);
        border-bottom: 0;
    }

    .@{ant-prefix}-collapse-content {
        border-top: 1px solid var(--color-gray-4);
    }

    &.@{ant-prefix}-collapse > .@{ant-prefix}-collapse-item > .@{ant-prefix}-collapse-header .@{ant-prefix}-collapse-arrow {
        top: var(--collapse-arrow-top);

        svg {
            position: absolute;
            top: 0;
            right: 0;
        }
    }

    .@{ant-prefix}-collapse-item {
        .@{ant-prefix}-collapse-header {
            color: var(--theme-text-color);
            font-weight: var(--collapse-header-font-weight);
            font-size: 14px;
            padding-top: 0;
            padding-bottom: 0;
            height: var(--collapse-header-height);
            line-height: var(--collapse-header-height);
            display: flex;
            align-items: center;

            .icon-wrapper {
                background: var(--collapse-expand-icon-bg);
                width: 16px;
                height: 16px;
                border-radius: 50%;
                color: var(--theme-text-color);
                top: auto;

                svg {
                    position: absolute;
                    top: 0;
                    right: 0;
                }

            }
        }
    }

    .@{ant-prefix}-collapse-item.@{ant-prefix}-collapse-item-disabled {
        .@{ant-prefix}-collapse-header,
        .@{ant-prefix}-collapse-arrow {
            color: var(--collapse-disabled-color);
        }
    }

    .@{ant-prefix}-collapse-item > .@{ant-prefix}-collapse-content > .@{ant-prefix}-collapse-content-box {
        .content-padding(42px);
    }
}

.content-padding(@content-padding-left) {
    padding-left: @content-padding-left;
    padding-top: var(--collapse-content-box-padding-top);
    padding-bottom: var(--collapse-content-box-padding-bottom);
}

// 对层级的控制
.nest(@level, @content-padding, @icon-padding) {
    .@{osui-collapse-class-prefix}-level-@{level} {
        .@{ant-prefix}-collapse {
            border-top: 0;
            border-left: 0;
            border-right: 0;

            > .@{ant-prefix}-collapse-item:last-child {
                border-bottom: 0;
            }
        }


        &.@{ant-prefix}-collapse-item > .@{ant-prefix}-collapse-content > .@{ant-prefix}-collapse-content-box {
            padding: 0 !important;
        }

        .@{osui-collapse-class-prefix}-level-child {
            .@{ant-prefix}-collapse-item > .@{ant-prefix}-collapse-content > .@{ant-prefix}-collapse-content-box {
                .content-padding(@content-padding);
            }

            .@{ant-prefix}-collapse-header {
                padding-left: @content-padding !important;

                .icon-wrapper.@{ant-prefix}-collapse-arrow {
                    left: @icon-padding;
                }
            }
        }
    }
}

.nest(1, 64px, 42px);
.nest(2, 86px, 64px);

